--- a/README.pod
+++ b/README.pod
@@ -1,5 +1,19 @@
 =head1 Config::MVP::Slicer
 
+Object for easily accepting embedded plugin configuration
+inside of another configuration and extracting it:
+
+  # config file
+  [@Bundle]
+  Included::Plugin.attr = new value
+
+  # in code:
+  my $slicer = Config::MVP::Slicer->new({
+    config => $parent->config,
+  });
+  # merge appropriate portion of parent config into plugin
+  $slicer->merge($plugin);
+
 See module POD for more information.
 
 =head1 COPYRIGHT AND LICENSE
