--- a/Changes
+++ b/Changes
@@ -2,6 +2,10 @@ Revision history for Config-MVP-Slicer
 
 {{$NEXT}}
 
+  [Documentation]
+  - Add a warning to the Pod about using an anchored or overly greedy regexp
+    for the 'separator' attribute (because it becomes part of a larger regexp).
+
 0.301     2011-10-19T05:22:14Z
 
   - Initial release
